// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderBreakdown customer transaction data matches snapshot 1`] = `
<div
  className="root"
>
  Array [
    <div
      className="lineItem"
    >
      <div
        className="bookingPeriod"
      >
        <div
          className="bookingPeriodSection"
        >
          <div
            className="dayLabel"
          >
            <span>
              OrderBreakdown.bookingStart
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 AM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
        <div
          className="bookingPeriodSectionRigth"
        >
          <div
            className="dayLabel"
          >
            <span>
              OrderBreakdown.bookingEnd
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 AM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr
      className="totalDivider"
    />,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        OrderBreakdown.baseUnitNight
      </span>
    </span>
    <span
      className="itemValue"
    >
      20
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="lineItemTotal"
    >
      <div
        className="totalLabel"
      >
        <span>
          OrderBreakdown.total
        </span>
      </div>
      <div
        className="totalPrice"
      >
        20
      </div>
    </div>,
  ]
</div>
`;

exports[`OrderBreakdown pretransaction data matches snapshot 1`] = `
<div
  className="root"
>
  Array [
    <div
      className="lineItem"
    >
      <div
        className="bookingPeriod"
      >
        <div
          className="bookingPeriodSection"
        >
          <div
            className="dayLabel"
          >
            <span>
              OrderBreakdown.bookingStart
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 AM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
        <div
          className="bookingPeriodSectionRigth"
        >
          <div
            className="dayLabel"
          >
            <span>
              OrderBreakdown.bookingEnd
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 AM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr
      className="totalDivider"
    />,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        OrderBreakdown.baseUnitNight
      </span>
    </span>
    <span
      className="itemValue"
    >
      20
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="lineItemTotal"
    >
      <div
        className="totalLabel"
      >
        <span>
          OrderBreakdown.total
        </span>
      </div>
      <div
        className="totalPrice"
      >
        20
      </div>
    </div>,
  ]
</div>
`;

exports[`OrderBreakdown provider transaction data matches snapshot 1`] = `
<div
  className="root"
>
  Array [
    <div
      className="lineItem"
    >
      <div
        className="bookingPeriod"
      >
        <div
          className="bookingPeriodSection"
        >
          <div
            className="dayLabel"
          >
            <span>
              OrderBreakdown.bookingStart
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 AM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
        <div
          className="bookingPeriodSectionRigth"
        >
          <div
            className="dayLabel"
          >
            <span>
              OrderBreakdown.bookingEnd
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 AM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr
      className="totalDivider"
    />,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        OrderBreakdown.baseUnitNight
      </span>
    </span>
    <span
      className="itemValue"
    >
      20
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="subTotalLineItem"
    >
      <span
        className="itemLabel"
      >
        <span>
          OrderBreakdown.subTotal
        </span>
      </span>
      <span
        className="itemValue"
      >
        20
      </span>
    </div>,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        OrderBreakdown.commission
      </span>
    </span>
    <span
      className="itemValue"
    >
      -2
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="lineItemTotal"
    >
      <div
        className="totalLabel"
      >
        <span>
          OrderBreakdown.providerTotalDefault
        </span>
      </div>
      <div
        className="totalPrice"
      >
        18
      </div>
    </div>,
  ]
  <span
    className="feeInfo"
  >
    <span>
      OrderBreakdown.commissionFeeNote
    </span>
  </span>
</div>
`;
